add yandex geolink

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     </div>
 </footer>
 
-<script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU&load=Geolink"
+<script src="https://api-maps.yandex.ru/2.1/?apikey=3f679b5c-bbe5-44e7-ac83-346561479344&lang=ru_RU&load=Geolink"
         type="text/javascript"></script>
 <script>
     const observer = new IntersectionObserver(
