--- a/index.html
+++ b/index.html
@@ -273,12 +273,7 @@
                 </p>
             </div>
             <div class="map-wrap">
-                <iframe
-                        title="Карта проезда"
-                        src="https://yandex.ru/map-widget/v1/?um=constructor%3Afd367a0f3f35d53d211a2bc7f5d6f178e8f600c45aebce2db34f97f978f934f7&amp;source=constructor"
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af6fd393a7b332cab06a97b59677701f6a969360a835573223216e2aff753c373&amp;source=constructor" width="614" height="537" frameborder="0"></iframe>
             </div>
         </div>
     </section>
