fix contact links

--- a/index.html
+++ b/index.html
@@ -262,18 +262,22 @@
                 <p><strong>Адрес:</strong> <span class="ymaps-geolink">
                     г. Самара, ул. Победы, д. 149
                 </span></p>
-                <p><strong>Телефон:</strong> <a href="tel:+79991234567">+7 (999) 123-45-67</a></p>
+                <p><strong>Телефон:</strong> <a href="tel:+79874425519">+7 (987) 442-55-19</a></p>
                 <p>
                     <strong>WhatsApp:</strong>
-                    <a href="https://wa.me/79991234567">Написать в WhatsApp</a>
+                    <a href="https://wa.me/79874425519">Написать в WhatsApp</a>
                 </p>
                 <p>
                     <strong>Telegram:</strong>
-                    <a href="https://wa.me/79991234567">Написать в Telegram</a>
+                    <a href="https://tg.me/Alisa93mirdetstva">Написать в Telegram</a>
                 </p>
             </div>
             <div class="map-wrap">
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af6fd393a7b332cab06a97b59677701f6a969360a835573223216e2aff753c373&amp;source=constructor" width="614" height="537" frameborder="0"></iframe>
+                <iframe
+                        src="https://yandex.ru/map-widget/v1/?um=constructor%3Af6fd393a7b332cab06a97b59677701f6a969360a835573223216e2aff753c373&amp;source=constructor"
+                        width="614"
+                        height="537"
+                        frameborder="0"></iframe>
             </div>
         </div>
     </section>
