fix contact links

--- a/index.html
+++ b/index.html
@@ -226,34 +226,6 @@
             </div>
         </div>
     </section>
-
-<!--    <section class="section section-soft reveal" id="signup">-->
-<!--        <div class="container narrow">-->
-<!--            <p class="eyebrow center">Запись</p>-->
-<!--            <h2>Запишитесь на консультацию или пробное занятие</h2>-->
-<!--            <p class="centered-text">-->
-<!--                Количество мест в расписании ограничено — оставьте заявку, и мы подберём-->
-<!--                удобное время для вас и ребёнка.-->
-<!--            </p>-->
-<!--            <form class="signup-form" action="#" method="post">-->
-<!--                <label>-->
-<!--                    Имя-->
-<!--                    <input type="text" name="name" placeholder="Ваше имя" required />-->
-<!--                </label>-->
-<!--                <label>-->
-<!--                    Телефон-->
-<!--                    <input-->
-<!--                            type="tel"-->
-<!--                            name="phone"-->
-<!--                            placeholder="+7 (___) ___-__-__"-->
-<!--                            required-->
-<!--                    />-->
-<!--                </label>-->
-<!--                <button class="btn btn-primary" type="submit">Хочу на консультацию</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </section>-->
-
     <section class="section reveal" id="contacts">
         <div class="container contacts-grid">
             <div>
@@ -269,7 +241,7 @@
                 </p>
                 <p>
                     <strong>Telegram:</strong>
-                    <a href="https://tg.me/Alisa93mirdetstva">Написать в Telegram</a>
+                    <a href="https://t.me/Alisa93mirdetstva">Написать в Telegram</a>
                 </p>
             </div>
             <div class="map-wrap">
