--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="hero" id="top">
     <div class="hero-overlay"></div>
     <nav class="container nav">
-        <a class="brand" href="#top">Здоровье мамы и ребёнка</a>
+        <a class="brand" href="#top">Студия развития Шаймордановых</a>
         <div class="nav-links">
             <a href="#services">Услуги и цены</a>
             <a href="#about">Обо мне</a>
@@ -33,7 +33,7 @@
         <p class="eyebrow">Оздоровительные практики для женщин и детей 0–14 лет</p>
         <h1>Бережно помогаю детям и женщинам чувствовать себя сильнее и спокойнее каждый день</h1>
         <p class="hero-subtitle">
-            Мягкое восстановление, индивидуальные программы и медицинская база —
+            Мягкое восстановление, индивидуальные программы —
             без лишней нагрузки и сложных терминов.
         </p>
         <div class="hero-actions">
@@ -69,19 +69,38 @@
                 </article>
 
                 <article class="card service-card">
-                    <h3>Детская йога (на основе гимнастики)</h3>
+                    <h3>Детская йога</h3>
                     <p>
                         Практика осознанного движения для гибкости, устойчивости, внимания и
                         мягкой разгрузки нервной системы.
                     </p>
+                    <div class="price-row"><span>30 минут</span><strong>900 ₽</strong></div>
+                    <div class="price-row"><span>60 минут</span><strong>1 550 ₽</strong></div>
                 </article>
 
                 <article class="card service-card">
-                    <h3>Комплексное развитие детей (на основе гимнастики)</h3>
+                    <h3>Комплексное развитие детей</h3>
                     <p>
-                        Программа с акцентом на осанку, мышечный тонус, координацию и общее
-                        укрепление организма.
+                        Игровые и развивающие занятия с элементами нейропсихологии и сенсорной интеграции.
                     </p>
+                    <div class="price-row"><span>30 минут</span><strong>900 ₽</strong></div>
+                    <div class="price-row"><span>60 минут</span><strong>1 550 ₽</strong></div>
+                </article>
+                <article class="card service-card">
+                    <h3>Психолог</h3>
+                    <p>
+                        Психологическая консультация.
+                    </p>
+                    <div class="price-row"><span>30 минут</span><strong>1 000 ₽</strong></div>
+                    <div class="price-row"><span>60 минут</span><strong>2 000 ₽</strong></div>
+                </article>
+                <article class="card service-card">
+                    <h3>Подготовка к школе</h3>
+                    <p>
+                        Игровые и развивающие занятия с элементами нейропсихологии и сенсорной интеграции.
+                    </p>
+                    <div class="price-row"><span>30 минут</span><strong>700 ₽</strong></div>
+                    <div class="price-row"><span>60 минут</span><strong>1 400 ₽</strong></div>
                 </article>
             </div>
             <p class="section-note">
@@ -103,7 +122,7 @@
                 <p class="eyebrow">Обо мне</p>
                 <h2>Алеся Шайморданова — специалист по оздоровительным практикам</h2>
                 <p>
-                    В работе соединяю медицинский подход, бережные практики и уважение к
+                    В работе соединяю бережные практики и уважение к
                     индивидуальным особенностям каждого ребёнка.
                 </p>
 
@@ -113,7 +132,7 @@
                     <li>Медицинский университет «Реавиз».</li>
                     <li>
                         Высшая медицинская академия (Санкт-Петербург): Войта-терапия,
-                        Бобат-терапия, медицинский массаж.
+                        Бобат-терапия, массаж.
                     </li>
                 </ul>
 
@@ -140,6 +159,7 @@
             <h2>Поддержка в ситуациях, когда важно действовать мягко и вовремя</h2>
             <ul class="audience-list">
                 <li>Детям с нарушением осанки.</li>
+                <li>Детям с задержкой речи.</li>
                 <li>При гипер- и гипотонусе.</li>
                 <li>При задержке моторного развития.</li>
                 <li>Для общего укрепления организма ребёнка.</li>
@@ -187,7 +207,7 @@
             <p class="eyebrow center">Почему мне доверяют</p>
             <h2>Профессионально, спокойно и с заботой о каждом ребёнке</h2>
             <ul class="trust-list">
-                <li>Медицинская подготовка и практический клинический опыт.</li>
+                <li>Большой опыт работы в данной сфере.</li>
                 <li>Индивидуальный план с учётом возраста и особенностей развития.</li>
                 <li>Бережные техники без давления и перегрузки.</li>
                 <li>Понятная обратная связь для родителей после занятия.</li>
@@ -236,8 +256,8 @@
                 </span></p>
                 <p><strong>Телефон:</strong> <a href="tel:+79874425519">+7 (987) 442-55-19</a></p>
                 <p>
-                    <strong>WhatsApp:</strong>
-                    <a href="https://wa.me/79874425519">Написать в WhatsApp</a>
+                    <strong>Вконтакте:</strong>
+                    <a href="https://vk.ru/mir_detej63">Написать в Вконтакте</a>
                 </p>
                 <p>
                     <strong>Telegram:</strong>
